test/libyul/yulSyntaxTests/dot_leading_function.yul
{
    function .x() {}
}
// ----
// ParserError 2314: (15-16): Expected identifier but got '.'
